<resources>
    <string name="app_name">Bus Route</string>
    <string name="colombo_bus_route">Colombo Bus Route</string>
    <string name="start_to_destination">Start to Destination</string>
    <string name="current_place_to_destination">Current Place to Destination</string>
    <string name="find_the_route">Find The Route</string>
    <string name="need_help">Need Help</string>

    <color name="ass">#495868</color>
    <array name="start_place">
        <item>From</item>
        <item>kelaniya</item>
        <item>Nugegoda</item>
        <item>Pettah</item>
        <item>Maradana</item>
        <item>Galle face</item>
        <item>Nittampuwa</item>
        <item>Kadawatha</item>
        <item>Kribathgoda</item>
    </array>
    <array name="destination_place">
        <item>To</item>
        <item>Pettah</item>
        <item>Town Hall</item>
        <item>Baththaramulla</item>
        <item>Kadawatha</item>
        <item>Kribathgoda</item>
        <item>Moratuwa</item>
        <item>Kollupitiya</item>
        <item>Bambalapitiya</item>
        <item>Wellawatta</item>

    </array>
</resources>
